--- a/lib/src/main/AndroidManifest.xml
+++ b/lib/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest package="in.srain.cube.views.ptr"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application android:allowBackup="true"
+    <application android:allowBackup="false"
                  android:label="@string/app_name"
                  android:supportsRtl="true"
     >
